Revision history for perl distribution Convos

5.12 Not Released
 - Allow .po files to be reloaded when developing

5.11 2021-01-14T08:57:00+0900
 - Add Norwegian translations #549
 - Add Italian translations #548
   Contributor: SerHack
 - Fix unicode issues related to translations #422
 - Fix loading language files in production

5.10 2021-01-13T14:43:00+0900
 - Add support for other languages #422
 - Add Spanish translations #545
   Contributor: Iván Ávalos and José Joaquín Atria
 - Add EXPERIMENTAL support for WEBIRC #346 #444 #546
 - Add author to blog posts
 - Fix utf8 issue in blog posts

5.09 2021-01-08T09:35:00+0900
 - Fix SASL authentication process for Oragono IRCd (and others) #356
 - Fix issue where notifications were double encoded UTF-8

5.08 2021-01-05T12:21:00+0900
 - Fix "convos version" after install/upgrade #539
 - Fix reading notifications with unicode
 - Fix issue with some pastebin links
 - Add notification when a video link is sent #472
 - Add link to raw version of the paste
 - Improved filename for pasted files

5.07 2020-12-29T13:32:00+0900
 - Add support for EXTERNAL and PLAIN SASL authentication #356 #525
 - Add supoort for nickserv certfp authentication #380

5.06 2020-11-30T11:25:00+0900
 - Add a "compact display" mode as Viewport option #535
   Contributor: Abhijit Menon-Sen
 - Add tighter integration with Jitsi video chat #536
 - Fix leading uppercase characters in usernames #538
   Contributor: Abhijit Menon-Sen
 - Removed EXPERIMENTAL video support added in 4.08 #204

5.05 2020-11-25T11:52:00+0900
 - Add support for for ":-*", ":O" and "(Y)" #534
   Contributor: Megaf
 - Add better rendering of Jitsi links
 - Fix not adding new private messages, unless historyStopAt
 - Fix resetting historyStopAt and historyStartAt when jumping back in history

5.04 2020-11-24T21:42:00+0900
 - Fix pasting text into the chat input
 - Fix updating search field value

5.03 2020-11-24T21:24:00+0900