@@ -47,7 +47,7 @@
     <!-- convos settings -->
     %= tag 'meta', name => 'contactorganization', content => settings('organization_name')
     %= tag 'meta', name => 'contactnetworkaddress', content => settings('organization_url')
-    %= tag 'meta', name => 'convos:base_url', content => app->core->base_url
+    %= tag 'meta', name => 'convos:base_url', content => app->settings('base_url')
     %= tag 'meta', name => 'convos:contact', content => b64_encode(settings('contact'), '')
     %= tag 'meta', name => 'convos:existing_user', content => (stash('existing_user') ? 'yes' : 'no')
     %= tag 'meta', name => 'convos:first_user', content => (stash('first_user') ? 'yes' : 'no')
